# perception_ws

./: README.md  docker-compose.yml
src/cpp_python_template_package/: CMakeLists.txt  README.md  package.xml
src/cpp_python_template_package/cpp_python_template_package/: python_template_node.py
src/cpp_python_template_package/include/cpp_python_template_package/: cpp_template_node.hpp
src/cpp_python_template_package/scripts/: spin_py_node.py
src/cpp_python_template_package/src/: spin_cpp_node.cpp
